--- a/index.html
+++ b/index.html
@@ -1,10 +1,78 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>你好，GitHub</title>
-  </head>
-  <body>
-    <h1>hello</h1>
-  </body>
+<html lang="en">
+<head>
+  <title></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://stackedit.io/style.css" />
+ <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<head>
+  <!--引用css-->
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
+    <!--引用jQuery-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
+
+</head>
+</head>
+<body>
+
+<nav class="navbar fixed-top navbar-dark navbar-inverse navbar-expand-lg">
+    <div class="container-fluid">
+     
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#"  onclick="load('')">HOME</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ">
+			            <li><a class="nav-link" href="#"  onclick="load('docker-container.html')">DOCKER</a></li>
+                        <li><a class="nav-link" href="#"  onclick="load('archlinux.html')">ARCHLINUX</a></li>
+						<li><a class="nav-link" href="#" onclick="load('archlinux-k8s.html')">KUBERNETS</a></li>
+                        <li><a class="nav-link" href="#" onclick="load('')">GIT</a></li>
+						<li><a class="nav-link" href="#" onclick="load('')">NGINX</a></li>
+           <!--     
+		   <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> STUDY </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">DOCKER</a></li>
+                        <li><a class="dropdown-item" href="#">ARCHLINUX</a></li>
+						<li><a class="dropdown-item" href="#">KUBERNETS</a></li>
+                        <li><a class="dropdown-item" href="#">GIT</a></li>
+						<li><a class="dropdown-item" href="#">NGINX</a></li>  
+                    </ul>
+                </li>
+			!-->
+			</ul>
+        </div>
+    </div>
+</nav>
+
+<div id="content"  style="margin-top:65px; width:100%; height:100%; z-index:1">
+
+</div>
+<script>
+function load (e){
+	
+	//document.getElementById("content").innerHTML='<object type="text/html" data="docker-container.html" ></object>';
+	
+	
+	 $("#content").load(e);
+}
+$(document).ready( function() {
+	console.log("init");
+	
+});
+</script>
+</body>
 </html>
