--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			            <li><a class="nav-link" href="#"  onclick="load('docker-container.html')">DOCKER</a></li>
                         <li><a class="nav-link" href="#"  onclick="load('archlinux.html')">ARCHLINUX</a></li>
 						<li><a class="nav-link" href="#" onclick="load('archlinux-k8s.html')">KUBERNETS</a></li>
-                        <li><a class="nav-link" href="#" onclick="load('')">GIT</a></li>
+                        <li><a class="nav-link" href="#" onclick="load('git.html')">GIT</a></li>
 						<li><a class="nav-link" href="#" onclick="load('')">NGINX</a></li>
            <!--     
 		   <li class="nav-item dropdown">
