git memo add ssh

--- a/git.html
+++ b/git.html
@@ -30,6 +30,13 @@
 <li>git rebase -i Head~N (修改 N個紀錄)</li>
 <li>git push repo -f</li>
 </ul>
+<h1 id="git-ssh-下載配置">git ssh 下載配置</h1>
+<ol>
+<li>gen public key and private key from putty</li>
+<li>public key 放置 git 網站設定</li>
+<li>openssh 加入 private key</li>
+<li>git clone 測試</li>
+</ol>
 </div>
 </body>
 
