--- a/git.html
+++ b/git.html
@@ -18,7 +18,8 @@
 <li>git revert [commit hash] (返回某次提交結果)</li>
 <li>git reset [commit hash] (將本地專案時間樹倒回某次提交之前)</li>
 <li>git submodule add [repo] (加入子專案)</li>
-<li>git checkout  -b [to_branch] [from branch] (新增分支)</li>
+<li>git checkout  -b [to_branch] [from branch] (新增分支並移動到分支)</li>
+<li>git checkout [branch] [移動到分支]</li>
 <li>git restore file (移除尚未提交的檔案修改)</li>
 <li>git status (本地當前專案狀態)</li>
 </ul>
