--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
                         <li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> STUDY </a>
 							<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-								<li><a class="dropdown-item" href="#" onclick="changePage('./docker-container.html')">DOCKER</a></li>
-								<li><a class="dropdown-item" href="#" onclick="changePage('./archlinux.html')">ARCHLINUX</a></li>
-								<li><a class="dropdown-item" href="#" onclick="changePage('./archlinux-k8s.html')">KUBERNETS</a></li>
-								<li><a class="dropdown-item" href="#" onclick="changePage('./git.html')">GIT</a></li>
+								<li><a class="dropdown-item" href="#" onclick="changePage('./git.html')">0-GIT</a></li>
+								<li><a class="dropdown-item" href="#" onclick="changePage('./archlinux.html')">1-ARCHLINUX</a></li>
+								<li><a class="dropdown-item" href="#" onclick="changePage('./docker-container.html')">2-DOCKER</a></li>
+								<li><a class="dropdown-item" href="#" onclick="changePage('./archlinux-k8s.html')">3-KUBERNETS</a></li>
+								
 								<!--<li><a class="dropdown-item" href="#" onclick="changePage('./memo/docker-container.html')">NGINX</a></li>  --!>
 							</ul>
 						</li>
