--- a/book/index.html
+++ b/book/index.html
@@ -168,7 +168,7 @@ img {
 
 
   <div id="pages" class="pages">
-    <div class="page"><p>PHOTO<br></p></div>
+    <div class="page"><p>日本 京都行<br></p></div>
   </div>
 </div>
   
@@ -229,7 +229,12 @@ $(document).ready(function(){
 	if(myphoto.length%6>0)
 	  length+=1;
 	//the buttom
-	length+=1;
+
+	if (length%2==0){
+    length+=1;
+		console.log("buttom add");
+		
+	}
 	let m_push_photo=0;
 	for(i; i<length;i++)
 	{
